# journal

./: .biome.json  .docs-fetch-state.json  .env.example  .env.production  .env.production.minimal  .env.schema  .envrc  .gitignore  .lycheecache  .markdownlint.json  .markdownlintignore  .mcp.json  .mise.toml  .mlc_config.json  .pre-commit-config.yaml  .remarkrc.mjs  .roomodes  .roorules  .tool-versions  .vale.ini  .vercelignore  .worktree-context.json  ADMIN_PASSPHRASE.md  AGENTS.md  BACKEND_ARCHITECTURE.md  CI_FIX_WORKFLOW.md  CLAUDE.md  CODEBASE_ASSESSMENT.md  CODEX-SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_INVESTIGATION_DIRECTIVE.md  DEPLOYMENT_DOCS.md  DEPLOYMENT_PLAN_V2.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_SETUP_ORDER.md  DEPLOYMENT_STATUS.md  DESIGN_AND_TOOLING_REPORT.md  DEVELOPMENT_FRAMEWORK.md  DOCUMENTATION_SYSTEM.md  (+57 more)
apps/api/: .env.example  .infisical.json  .pre-commit-config.yaml  ARCHITECTURAL_ANALYSIS.md  Dockerfile  ERRORS_ANALYSIS.md  FASTAPI_DEPS_ANALYSIS.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_ROADMAP.md  INFISICAL_INTEGRATION.md  Makefile  QUALITY_TESTING_SUMMARY.md  README.md  TESTING.md  alembic.ini  docker-compose.yml  healthcheck_db.py  mypy.ini  pyproject.toml  ruff-config.txt  ruff-version.txt  test_debug.py
apps/api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml  postCreateCommand.sh  postStartCommand.sh
apps/api/.tools/: fix_fastapi_annotated.py  fix_linting_phase2.py  fix_pt023.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_enable_pgvector.py  0002_add_fts_and_indexes.py  0003_add_markdown_dual_storage.py  0004_add_version_lock.py  0005_add_content_metrics.py  0006_add_metrics_safe.py  0007_add_processed_events.py  0008_outbox_retry_fields.py  0009_add_users_and_sessions.py  001_baseline_2025_09_16.py  195a997c2ee9_add_audit_log_and_deletion_request_.py  d0d871f401f2_add_userdevice_table_and_device_id_to_.py
apps/api/alembic/versions_legacy/: 0001_enable_pgvector.py  0002_add_fts_and_indexes.py  0003_add_markdown_dual_storage.py  0004_add_version_lock.py  0005_add_content_metrics.py  0006_add_metrics_safe.py  0007_add_processed_events.py  0008_outbox_retry_fields.py  0009_add_users_and_sessions.py  0010_add_webauthn_tables.py  195a997c2ee9_add_audit_log_and_deletion_request_.py  d0d871f401f2_add_userdevice_table_and_device_id_to_.py  efeffa3b8ef5_add_recoverycode_table_for_backup_codes.py
apps/api/app/: main.py  settings.py
apps/api/app/api/: health.py
apps/api/app/config/: token_rotation_config.py
apps/api/app/domain/: __init__.py
apps/api/app/graphql/: schema.py
apps/api/app/infra/: __init__.py  auth.py  auth_counters.py  auto_embed.py  base.py  conversion.py  cookies.py  cookies_v2.py  db.py  embeddings.py  enhanced_auth.py  ip_extraction.py  metrics.py  models.py  nats_bus.py  outbox.py  password.py  ratelimit.py  redis.py  repository.py  sa_models.py  search_pgvector.py  security.py  sessions.py  webauthn_models.py
apps/api/app/middleware/: enhanced_jwt_middleware.py  jwt_middleware.py
apps/api/app/scripts/: __init__.py  backfill_markdown.py  migrate_to_infisical.py
apps/api/app/security/: __init__.py  enhanced_auth.py  oidc.py  token_cipher.py
apps/api/app/services/: entry_service.py  integrated_auth_service.py  jwks_service.py  m2m_token_service.py  monitoring_scheduler.py  session_service.py  token_cipher.py  users.py  webauthn.py
apps/api/app/telemetry/: __init__.py  infisical_monitoring.py  jwks_metrics.py  metrics_runtime.py  otel.py
apps/api/app/types/: __init__.py  guards.py  utilities.py
apps/api/app/workers/: embedding_consumer.py
apps/api/docs/: AUTH_MIGRATION_GUIDE.md  GOPASS_INTEGRATION.md  INFISICAL_SECRET_PATHS_SETUP.md  INFISICAL_SETUP_GUIDE.md  UNIVERSAL_AUTH_DEPLOYMENT.md  V2_AUTH_PRODUCTION_FIXES.md  infisical-identities-manifest.yml  testing.md  typing-patterns.md
apps/api/docs/_generated/: db_unlock_20250902.md
apps/api/docs/adr/: 001-type-architecture.md
apps/api/docs/architecture/: case-study-error-1.md  case-study-error-2-3.md
apps/api/docs/observability/: metrics.md
apps/api/docs/philosophy/: type-safety-manifesto.md  type-safety-wisdom.md
apps/api/docs/quality/: linting-philosophy.md  quality-audit.md
apps/api/docs/reflections/: type-journey-autobiography.md
apps/api/docs/type-tour/: tour.py
apps/api/scripts/: add_frontmatter.py  backfill_markdown.py  check_mypy.sh  dev-environment.sh  extract_openapi.py  perf_smoke.py  setup-infisical-auth.sh  test-auth-flow.sh  type_health.py  validate-infisical-setup.sh  wait_for_server.sh
apps/api/tests/: __init__.py  conftest.py  conftest_auth_v2.py  test_auth_v2.py  test_monitoring_api.py
apps/api/tests/api/: test_admin.py  test_api_auth.py  test_api_entries.py  test_api_entries_delete.py  test_api_entries_errors.py  test_api_entries_markdown.py  test_api_search.py  test_csrf_endpoint.py  test_entries_quality.py  test_search_quality.py  test_stats.py
apps/api/tests/e2e/: test_api_coverage.py  test_smoke_api.py
apps/api/tests/fixtures/: jwt_fixtures.py  time_fixtures.py
apps/api/tests/helpers/: auth_helpers.py
apps/api/tests/infisical/: test_monitoring.py
apps/api/tests/integration/: test_alembic_migrations.py  test_auth_password_flow.py  test_auth_user_management_scaffold.py  test_embedding_worker_consolidated.py  test_embedding_worker_full.py  test_infisical_integration.py  test_key_rotation.py  test_markdown_migration.py  test_nats_pubsub.py  test_nats_reconnect.py  test_nats_request_reply.py  test_outbox_consolidated.py  test_outbox_retry.py  test_permissions_scaffold.py  test_real_user_auth.py  test_refresh_rotation.py  test_search_pgvector.py  test_workflows_quality.py
apps/api/tests/security/: conftest.py  (+5 more)
docs/journal-backend-bootstrap-pgvector-fts-reindex/: Dockerfile  README.md  pyproject.toml
docs/journal-backend-bootstrap-pgvector-fts-reindex/app/: README.md  main.py  settings.py
docs/journal-backend-bootstrap-pgvector-fts-reindex/ops/: README.md
docs/journal-backend-bootstrap-pgvector-fts-reindex/tests/: README.md  test_smoke.py
(+1430 files in other folders)
